# b2filt

./: .gitignore  README.md  pyproject.toml  setup.cfg  upload.sh
.github/workflows/: publish.yml  test.yml
b2filt/: __init__.py  _version.py  errorwriter.py  util.py
tests/: test_errorwriter.py  test_find_b2.py  test_version.py
