[tool.poetry]
name = "b2filt"
version = "0.1.0"
description = "Filter for output of B2 build tool from boost.org"
authors = ["Hans Dembinski <hans.dembinski@gmail.com>"]
license = "BSL-1.0"

[tool.poetry.scripts]
b2filt = "b2filt:main"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
