[metadata]
name = b2filt
version = attr: b2filt.__version__
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Filter for output of B2 build tool from boost.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/b2filt
project_urls =
    Bug Tracker = https://github.com/hdembinski/b2filt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
packages = b2filt
python_requires = >=3.6

[options.entry_points]
console_scripts =
    b2filt = b2filt:main

[options.extras_require]
test = pytest; requests

[flake8]
max-line-length = 90
